Fix button styling - centre align text - remove border

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 *{
     padding: 0;
+    border: 0;
     margin: 0;
     outline: none;
     appearance: none;
@@ -17,6 +18,7 @@ body{
     padding: 0 24px;
     border-radius: 20px;
     display: flex;
+    align-items: center;
     background: #000000;
     color: #ffffff;
 }
